[package]
name = "mightybadger-actix-web"
description = "Honeybadger Notifier for Rust, middleware for Actix Web"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

homepage = "https://github.com/qnighy/mightybadger-rs"
repository = "https://github.com/qnighy/mightybadger-rs.git"
readme = "README.md"
keywords = ["honeybadger", "actix-web"]
categories = ["web-programming", "api-bindings", "development-tools"]
license = "MIT"

[dependencies]
pin-project = "1.0.1"
futures = "0.3.7"
actix-web = { version = "3.3.0", default-features = false }
mightybadger = { git = "https://github.com/qnighy/mightybadger-rs.git", rev = "98a67e7" }
failure = "0.1.5"
serde_urlencoded = "0.7.0"

[dev-dependencies]
actix-rt = "1.1.1"
actix-web = { version = "3.3.0", default-features = true }
